@@ -30,7 +30,7 @@ or played back on the user's desktop.
 # PLEASE DO NOT CHANGE FORMAT OF __version__ LINE (setup.py reads this)
 
 __author__    = "Thomas Perl <thp@perli.net>"
-__version__   = "0.11.2"
+__version__   = "0.11.2+svn"
 __date__      = "2008-04-26"
 __copyright__ = "Copyright (c) 2005-2008 %s. All rights reserved." % __author__
 __licence__   = "GPL"
