@@ -1,3 +1,10 @@
+Tue, 29 Apr 2008 20:21:45 +0200 <thp@perli.net>
+Fix problems with resizing the treeview on Maemo
+
+	* src/gpodder/gui.py: Fix problems with treeview resizing and remove
+	printing the percentage
+	* bin/gpodder: We're in development again, so "+svn"
+
 Sat, 26 Apr 2008 08:34:37 +0200 <thp@perli.net>
 Merge gPodder 0.11.2 release stuff and German translation update
 
